glibc (2.22-0experimental1) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc-dev.install: install libmvec_nonshared.a.
  * debian/rules.d/build.mk: use logme instead of tee to fail the build if the
    testsuite fails to build, instead of fully ignoring it.
  * debian/control.in/main, debian/rules: build with gcc-5.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 02 Dec 2015 01:10:00 +0100

glibc (2.22-0experimental0) experimental; urgency=medium

  [ Adam Conrad ]
  * New upstream release: version 2.22, with git updates up to 2015-11-27:
    - debian/patches/all/local-alias-UTF-8.diff: Fixed upstream.
    - debian/patches/any/cvs-ldconfig-aux-cache.diff: Upstreamed.
    - debian/patches/any/cvs-localplt-new-readelf.diff: Upstreamed.
    - debian/patches/any/cvs-logbl-accuracy.diff: Upstreamed.
    - debian/patches/any/cvs-vismain-pie.diff: Upstreamed.
    - debian/patches/any/local-xfail-stdlib-linkns.diff: Dropped.
    - debian/patches/any/local-tester-gcc-4.9.diff: Dropped.
    - debian/patches/arm/cvs-arm-sfi_breg.diff: Upstreamed.
    - debian/patches/arm/cvs-memcpy-memmove-always-bx.diff: Upstreamed.
    - debian/patches/hppa/cvs-alloca-werror.diff: Upstreamed.
    - debian/patches/hppa/cvs-fpu-r2.diff: Upstreamed.
    - debian/patches/hppa/cvs-fpu2.diff: Upstreamed.
    - debian/patches/hppa/local-fcntl-osync.diff: Fixed upstream.
    - debian/patches/hppa/local-setcontext.diff: Fixed upstream.
    - debian/patches/powerpc/cvs-power7-strncpy.diff: Upstreamed.
    - debian/patches/powerpc/cvs-ppc-feraiseexcept.diff: Upstreamed.
    - debian/patches/powerpc/cvs-ppc-pow.diff: Upstreamed.
    - debian/patches/powerpc/cvs-ppc-sqrt.diff: Upstreamed.
    - debian/patches/powerpc/cvs-ppc-sqrtf.diff: Upstreamed.
    - debian/patches/powerpc/cvs-ppc-tabort-le.diff: Upstreamed.
    - debian/patches/all/local-alias-et_EE.diff: Rebased.
    - debian/patches/amd64/local-blacklist-for-Intel-TSX.diff: Rebased.