@@ -37416,7 +37416,7 @@
 +#endif	/* !PIC */
 --- /dev/null
 +++ b/sysdeps/unix/bsd/bsd4.4/kfreebsd/x86_64/sysdep.h
-@@ -0,0 +1,207 @@
+@@ -0,0 +1,204 @@
 +/* Copyright (C) 2001,02,03,04 Free Software Foundation, Inc.
 +   This file is part of the GNU C Library.
 +   Modification for FreeBSD contributed by Petr Salinger, 2006.
@@ -37441,12 +37441,9 @@
 +
 +/* There is some commonality.  */
 +#include <sysdeps/unix/x86_64/sysdep.h>
++/* Defines RTLD_PRIVATE_ERRNO and USE_DL_SYSINFO.  */
++#include <dl-sysdep.h>
 +#include <tls.h>
-+
-+#if IS_IN (rtld)
-+# include <dl-sysdep.h>		/* Defines RTLD_PRIVATE_ERRNO.  */
-+#endif
-+
 +
 +#ifdef __ASSEMBLER__
 +
