@@ -5,6 +5,7 @@ glibc (2.22-0experimental1) UNRELEASED; urgency=medium
   * debian/rules.d/build.mk: use logme instead of tee to fail the build if the
     testsuite fails to build, instead of fully ignoring it.
   * debian/control.in/main, debian/rules: build with gcc-5.
+  * kfreebsd/local-sysdeps.diff: update to revision 5845 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 02 Dec 2015 01:10:00 +0100
 
